--- a/browser/js/playlist/playlist.html
+++ b/browser/js/playlist/playlist.html
@@ -1,5 +1,11 @@
 <div>
   <h3>{{ playlist.name }}</h3>
+  <div>
+    <h4>Add to Playlist</h4>
+    <select ng-options=" song as song.name for song in allSongs" ng-model="selected"></select>
+      <button class="btn btn-default btn-xs" ng-click="addSong()"> Add Song
+      </button>
+  </div>
   <table class='table' ng-show="playlist.songs.length">
     <thead>
       <tr>
