--- a/browser/js/playlist/playlist.html
+++ b/browser/js/playlist/playlist.html
@@ -25,6 +25,11 @@
         <td>{{ song.name }}</td>
         <td><span ng-repeat="artist in song.artists">{{ artist.name }}{{ $last ? '' : ', ' }}</span></td>
         <td>{{ song.genres.join(', ') }}</td>
+        <td>
+          <button class="btn btn-default btn-xs" ng-click="delete(song)" >
+            <span class="glyphicon glyphicon-remove-circle"></span>
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
