--- a/browser/index.html
+++ b/browser/index.html
@@ -5,9 +5,13 @@
     <link href="/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="/bootstrap-dark.css" rel="stylesheet" />
     <link href="/style.css" rel="stylesheet" />
+    <script src="jquery/dist/jquery.min.js"></script>
+    <script   src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"   integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="   crossorigin="anonymous"></script>
     <script src="/angular/angular.js" defer></script>
+    <script src="/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js" defer></script>
     <script src="/angular-ui-router/release/angular-ui-router.js" defer></script>
-     <script src="/angular-messages/angular-messages.js" defer></script>
+    <script src="/angular-ui-sortable/src/sortable.js" defer></script>
+    <script src="/angular-messages/angular-messages.js" defer></script>
     <script src="/js/module.js" defer></script>
     <script src="/js/album/album.controllers.js" defer></script>
     <script src="/js/album/album.factory.js" defer></script>
